datasets/dataset_txt/mitmproxy/mitmproxy_1416.txt
profhase commented on 16 Jun 2015
Installing mitmproxy with pip install mitmproxy I am getting the followingerror (pip 7.0.3, ubuntu 12.04, python 2.7):
  File "/home/me/virtualenvs/myvenv/build/mitmproxy/setup.py", line 19

    " netlib>=%s, <%s" % (version.MINORVERSION, version.NEXT_MINORVERSION),

                                                                     ^

    SyntaxError: invalid syntax